# ai-soc-agentic-ai

./: .gitignore  README.md  pyproject.toml  report.md
src/job_search_automation/: crew.py  main.py
src/job_search_automation/config/: agents.yaml  inputs.yaml  tasks.yaml
src/job_search_automation/tools/: custom_tool.py
