[project]
name = "job_search_automation"
version = "0.1.0"
description = "job-search-automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
job_search_automation = "job_search_automation.main:run"
run_crew = "job_search_automation.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
